package abstractions;

public class RepeatLoop extends ConditionalLoop {

    @Override
    public String getLoopType() {
        return "repeat";
    }
}
