package abstractions;

public class WhileLoop extends ConditionalLoop {

    @Override
    public String getLoopType() {
        return "while";
    }
}
